<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <CheckBoxPreference android:persistent="true"
    android:key="NOTIFICATION_ICON"
    android:title="@string/notification_icon_title"
    android:summaryOn="@string/notification_icon_on"
    android:summaryOff="@string/notification_icon_off"
    android:defaultValue="true" />

    <ListPreference
        android:persistent="true"
        android:key="NOTIFICATION_TEXT"
        android:title="@string/notification_text_title"
        android:dialogTitle="@string/notification_text_title"
        android:summary="@string/notification_text_summary"
        android:entries="@array/notification_text_types"
        android:entryValues="@array/notification_text_values"
        android:defaultValue="2" />
 <!-- <ListPreference
      android:persistent="true"
      android:key="APP_THEME_KEY"
      android:title="@string/app_theme_title"
      android:dialogTitle="@string/themes"
      android:summary="@string/app_theme_summary"
      android:entries="@array/app_themes"
      android:entryValues="@array/app_themes_values"
      android:defaultValue="0"
      >

  </ListPreference>-->

  <Preference
      android:persistent="false"
      android:key="@string/settings_default_alarm_key"
      android:title="@string/default_settings"
      />
  <Preference
      android:persistent="false"
      android:key="@string/settings_about_key"
      android:title="@string/settings_about_key"
      />
  <!-- <Preference
      android:persistent="false"
      android:key="@string/settings_about_key"
      android:title="@string/menu_item_website"
      />-->

</PreferenceScreen>
